# DouyinLiveRecorder

./: .gitignore  ApiStructs.h  ApiUtils.cpp  ApiUtils.h  CMakeLists.txt  MainManager.cpp  MainManager.h  MassageQueue.cpp  MassageQueue.h  README.md  Recoder.cpp  Recoder.h  conf.txt  cookie.txt  main.cpp  url.txt  vcpkg.json
